Acomodando redacción y completando cosas | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Servicio de Nombre de Dominio (DNS).md
@@ -49,7 +49,7 @@ La forma en la que se resuelven los nombres de dominio puede darse de dos formas
 
 >[!tldr] Sistema de Caching de los Servidores DNS
 >Cuando un servidor DNS resuelve la dirección IP de un nombre de dominio, almacena temporalmente esa información en su caché. El propósito de esta caché es reducir la necesidad de futuras búsquedas para el mismo nombre de dominio, lo que ahorra tiempo y reduce la carga en los servidores DNS.
->Cada registro en la caché de DNS tiene un ***tiempo de vida (TTL)***, que es un valor establecido por el administrador del servidor DNS del dominio. El TTL indica cuánto tiempo debe almacenarse el registro en caché antes de que se considere obsoleto y se elimine de la caché.
+>Cada registro en la caché de DNS tiene un ***tiempo de vida (TTL)***, que es un valor establecido por el administrador del servidor DNS del dominio. El TTL indica cuánto tiempo debe almacenarse el registro en caché antes de que se considere obsoleto y sea eliminado de esta.
 
 #### Registros de Recursos y Mensajes DNS
 
