--- a/4º Año/Comunicaciones y Redes/Unidad 2/3. Cloud Computing.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/3. Cloud Computing.md
@@ -23,7 +23,7 @@ Más allá de esta definición brindada por el NIST, el concepto de Cloud puede 
 ### Modelo de Servicio
 
 - **Software-as-a-Service (SaaS)**: En este modelo se proporciona un producto completo, el cual es ofrecido por el proveedor, quien se encarga de la administración del entorno. El usuario no tiene que preocuparse por la infraestructura de nube, tampoco interesa saber cómo se mantiene el servicio, solo se consume. Las aplicaciones son accesibles desde varios dispositivos cliente a través de una interfaz como un navegador web o una interfaz de programa. El mejor ejemplo de esto son servicios como Office 365, ICloud, Redes sociales, entre otras similares.
-- **Platform-as-a-Service (PaaS)**: Modelo utilizado principalmente por desarrolladores de software. En principio implica un nivel de abstracción más, por encima de IaaS. El proveedor garantiza el sistema operativo, los lenguajes de programación, las librerías y herramientas, ofreciendo plataforma completa y escalable, donde los desarrolladores solo tienen que preocuparse por el código de la aplicación. El consumidor no administra ni controla la infraestructura de la nube subyacente, incluyendo la capa de máquinas virtuales, sistemas operativos y almacenamiento, pero tiene control total sobre sus aplicaciones implementadas y en algunos casos tendrá acceso a algunos ajustes de configuración del entorno. El mejor ejemplo de estos Servicios son Azure, AWS, Heroku, entre otras.
+- **Platform-as-a-Service (PaaS)**: Modelo utilizado principalmente por desarrolladores de software. En principio implica un nivel de abstracción más, por encima de IaaS. El proveedor garantiza el sistema operativo, los lenguajes de programación, las librerías y herramientas, ofreciendo plataforma completas y escalables, donde los desarrolladores solo tienen que preocuparse por el código de la aplicación. El consumidor no administra ni controla la infraestructura de la nube subyacente, incluyendo la capa de máquinas virtuales, sistemas operativos y almacenamiento, pero tiene control total sobre sus aplicaciones implementadas y en algunos casos tendrá acceso a algunos ajustes de configuración del entorno. El mejor ejemplo de estos Servicios son Azure, AWS, Heroku, entre otras.
 - **Infrastructure-as-a-Servise (IaaS)**: Modelo utilizado principalmente por administradores de sistemas. Este modelo de servicio proporciona recursos fundamentales, redes, servidores, almacenamiento y firewalls, todo en modo servicio. En este modelo, el cliente tiene mayor control de la información, ya que puede implementar y ejecutar software de acuerdo a sus preferencias (*Datacenter as a service*). El consumidor no administra ni controla la nube subyacente como infraestructura, pero tiene control sobre los sistemas operativos, el almacenamiento y las aplicaciones implementadas; aunque posee un control limitado de componentes (por ejemplo, servidores, sistema operativo, firewalls). El consumidor será responsable de la administración y seguridad de su máquina virtual, de configurar reglas de acceso, instalar parches de seguridad, entre otras. Aquí se encuentran todas las plataformas de servicios cloud como AWS, OpenStack o Google Cloud Platform.
 
 >[!tldr] Serverless Computing
