--- a/4º Año/Comunicaciones y Redes/Unidad 2/4. Arquitectura Orientada a Servicios.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/4. Arquitectura Orientada a Servicios.md
@@ -15,7 +15,7 @@ SOA puede dividirse en distintos modelos de arquitectura, cada uno de los cuales
 - **Modelo Arquitectónico de Implementación**: Se refiere al sistema realizado de una cierta manera utilizando un hardware y software específicos.
 
 >[!tldr] Conceptos Fundamentales
->- **Servicios**: funcionalidad que se corresponde explícitamente con una paso de un proceso de negocios.
+>- **Servicios**: funcionalidad que se corresponde explícitamente con un paso de un proceso de negocios.
 >- **Interoperabilidad**: basada en estándares abiertos para favorecer la integración entre sistemas heterogéneos.
 >- **Bajo acoplamiento**: tendiente a minimizar las dependencias entre las partes del sistema en base a una interacción basada en interfaces públicas.
 
@@ -75,7 +75,7 @@ Niveles funcionales:
 - **Procesos de Negocios**: Composición de múltiples servicios para representar procesos de negocios que produzcan resultados de valor.
 
 Niveles de calidad de servicio:
-- **Políticas**: Reglas que especifican las condiciones bajas las cuales un proveedor expone sus servicios.
+- **Políticas**: Reglas que especifican las condiciones bajo las cuales un proveedor expone sus servicios.
 - **Confiabilidad**: Mecanismos para la entrega de mensajes confiable (garantía de entrega, entrega ordenada, etc)
 - **Seguridad**: Mecanismos para la transmisión segura de mensajes y para la identificación, autenticación y control de acceso de los consumidores de servicios, entre otros.
 - **Transacciones**: Procedimientos aplicados para garantizar resultados consistentes en la invocación de múltiples servicios.
