--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de Transporte.md
@@ -6,5 +6,5 @@ Los protocolos de la capa de transporte están implementados en los sistemas ter
 
 ### Relación entre la Capa de Transporte y de Red
 
-Como ta mencionamos anteriormente la capa de transporte proporciona una comunicación lógica entre los proceso. Por otro lado la capa de red establece una comunicación lógica entre dos máquinas.
+Como mencionamos anteriormente la capa de transporte proporciona una comunicación lógica entre los proceso. Por otro lado la capa de red establece una comunicación lógica entre dos máquinas.
 En la práctica el protocolo de transporte lleva los mensajes desde los procesos de la aplicación a la capa de la red y viceversa, pero no tiene nada que ver con cómo se transmiten los mensajes dentro de la red. Además en la capa de transporte pueden existir distintos protocolos que ofrezcan distintos modelos de servicio a las aplicaciones. A su vez los servicios que un protocolo de transporte puede proporcionar a menudo están restringidos por el modelo de servicio del protocolo de la capa de red subyacente, esto quiere decir que si el protocolo de la capa de red no proporciona garantías acerca del retardo ni del ancho de banda para los segmentos de la capa de transporte enviados, entonces el protocolo de la capa de transporte no puede proporcionar ninguna garantía acerca del retardo o del ancho de banda a los mensajes de aplicación enviados entre procesos.
