--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. Protocolos de Transporte.md
@@ -29,9 +29,7 @@ El Protocolo de Control de Transmisión es uno de los métodos de transferencia 
 
 1. **Servicio Orientado a la Conexión**: TCP hace que el cliente y el servidor se intercambien información de control en la capa de transporte antes de empezar la transferencia. Esto se llama handshaking. A partir de allí existe una conexión full-duplex entre los sockets. Una vez finalizada la transferencia de datos se rompe la conexión entre ambos sockets.
 2. **Servicio Fiable de Transporte**: Envía el flujo de datos entre sockets sin cometer errores y en el orden correcto.
-3. **Control de Congestión**: Regula el proceso de emisión de segmentos cuando la red está congestionada, el protocolo se esfuerza para garantizar a cada conexión que atraviesa por un enlace congestionado la misma cuota de ancho de banda del enlace, esto se logra regulando la velocidad con la que los emisores pueden enviar paquetes a la red.
-
-Con la desventaja de que TCP no garantiza una tasa de transmisión mínima, es decir, que la velocidad de transferencia va a depender de como se regule la congestión en la red. Además, que este método no proporciona garantía de retardo.
+3. **Control de Congestión**: Regula el proceso de emisión de segmentos cuando la red está congestionada, el protocolo se esfuerza para garantizar a cada conexión que atraviesa por un enlace congestionado la misma cuota de ancho de banda del enlace, esto se logra regulando la velocidad con la que los emisores pueden enviar paquetes a la red. Con la desventaja de que TCP no garantiza una tasa de transmisión mínima, es decir, que la velocidad de transferencia va a depender de como se regule la congestión en la red. Además, que este método no proporciona garantía de retardo.
 
 >[!tldr] Conceptos Asociados a TCP
 >- Control de suma de comprobación.
@@ -70,7 +68,7 @@ Existen muchas aplicaciones que utilizan UDP por sobre TCP por las siguientes ra
 
 1. Se posee un mayor control en el nivel de aplicación sobre que datos se envían, ya que una vez que el proceso de la capa de aplicación envía los datos a la capa de transporte, se agregan de forma casi inmediata los encabezados UDP y se pasa directamente a la capa de red.
 2. No se establece una conexión entre el emisor y receptor, esto resulta conveniente cuando el tamaño y volúmenes de los datos son pequeños. Esto permite un menor tiempo en el envío de datos.
-3. No requiere mantener información sobre el estado de la conexión lo que a los servidores tener más clientes activos de manera simultánea.
+3. No requiere mantener información sobre el estado de la conexión lo que permite a los servidores tener más clientes activos de manera simultánea.
 4. Escasa sobrecarga en las cabeceras del segmento, dado que el encabezado de UDP solo ocupa 8 bytes, en lugar de 20 como pasa son TCP.
 
 Por estas razones, es que protocolos como el NFS, SNMP, RIP o incluso DNS utilizan UDP a la hora de enviar información a otros equipos, además los servicios de telefonía sobre internet y la difusión multimedia suelen emplear este protocolo debido a su velocidad.
