--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -3,8 +3,7 @@ La función de la capa de red es simple, es la encartada de transporta paquetes 
 1. **Reenvío (forwarding)**: Cuando un paquete llega al enlace de entrada de un router, éste tiene que pasar el paquete al enlace de salida apropiado. Por ejemplo, un paquete que llega procedente de $H_1$ al router $R_1$ debe ser reenviado al siguiente router de la ruta hacia $H_2$, es decir, hacia su destino.
 2. **Enrutamiento (routing)**: La capa de red tiene que determinar la ruta o camino que deben seguir los distintos paquetes a medida que fluyen desde emisor al receptor. Los algoritmos que calculan estas rutas se conocen como ***algoritmos de enrutamiento***.
 
-Todo router tiene una tabla de reenvío. Un router reenvía un paquete examinando el valor de un campo de la cabecera del paquete entrante y utilizando después ese valor para indexarlo dentro de la tabla de reenvío del router. El resultado de la tabla de reenvío indica a
-cuál de las interfaces del enlace de salida del router será reenviado el paquete. En ocasiones se emplea el término de ***conmutador de paquetes*** para referirnos a un dispositivo de conmutación de paquetes general que transfiere un paquete desde la interfaz del enlace de entrada a la interfaz del enlace de salida, de acuerdo con el valor almacenado en un campo de la cabecera del paquete, aunque algunos conmutadores basan su decisión de acurdo al campo de la cabecera de la capa de enlace, mientras que otros lo basan en el campo de la cabecera de la capa de red.
+Todo router tiene una tabla de reenvío. Un router reenvía un paquete examinando el valor de un campo de la cabecera del paquete entrante y utilizando después ese valor para indexarlo dentro de la tabla de reenvío del router. El resultado de la tabla de reenvío indica a cuál de las interfaces del enlace de salida del router será reenviado el paquete. En ocasiones se emplea el término de ***conmutador de paquetes*** para referirnos a un dispositivo de conmutación de paquetes general que transfiere un paquete desde la interfaz del enlace de entrada a la interfaz del enlace de salida, de acuerdo con el valor almacenado en un campo de la cabecera del paquete, aunque algunos conmutadores basan su decisión de acurdo al campo de la cabecera de la capa de enlace, mientras que otros lo basan en el campo de la cabecera de la capa de red.
 
 >[!example] Conmutación de Paquetes y Conmutación de Circuitos
 >Al momento de realizar el intercambio de paquetes entre dos equipos se pueden emplear dos métodos de comunicación diferentes:
