--- a/4º Año/Comunicaciones y Redes/Unidad 4/2. Multiplexacion.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/2. Multiplexacion.md
@@ -11,7 +11,8 @@ Es una técnica que se basa en dividir el ancho de banda de un canal de comunica
 1. **División del Ancho de Banda:** El ancho de banda del canal se divide en múltiples subcanales, cada uno destinado a una comunicación particular. La suma de los anchos de banda de todos los subcanales no debe exceder el ancho de banda total del canal principal.
 2. **Separación de Portadoras:** Para que las señales puedan transmitirse simultáneamente sin interferencia, las portadoras de cada subcanal se separan en frecuencia, logrando que los anchos de banda de los subcanales no se solapen, garantizando la integridad de las señales transmitidas.
 ### Multiplexación por División de Longitud de Onda (WDM)
-NO ENTENDI
+
+Es una tecnología que se utiliza en redes de fibra óptica para aumentar la capacidad de transmisión de datos. Funciona permitiendo que múltiples señales de luz, cada una en una longitud de onda diferente, sean transmitidas simultáneamente a través de una única fibra óptica.
 ### Multiplexación por División de Tiempo (TDM)
 
 Es una técnica que asigna periódicamente y por un tiempo limitado todo el canal de comunicación a una conexión específica. Ese período de tiempo fijo recibe el nombre de slot y en el mismo se transfiere un reducido número de bits (por ej. uno u ocho) por cada conexión entre 2 equipos terminales.
@@ -24,7 +25,6 @@ Caracteristicas:
 - **Inclusión de Información Adicional:** Cada slot de tiempo incluye información adicional, como la dirección de origen o destino, junto con los bits que se van a transmitir. Esta información es crucial para dirigir los datos correctamente a su destino final.
 - **Flexibilidad y Eficiencia:** La multiplexación estadística ofrece una mayor flexibilidad y eficiencia en la asignación de recursos de transmisión, ya que se adapta dinámicamente a las necesidades cambiantes de tráfico de los diferentes dispositivos conectados.
 
-#### Análisis comparativo entre TDM y STDM
 |Aspecto|TDM|STDM|
 |---|---|---|
 |Asignación de slots de tiempo|Fija, asigna intervalos fijos a cada conexión|Dinámica, asigna slots según tráfico real|
@@ -51,7 +51,7 @@ Frame Relay es una tecnología de red orientada a paquetes diseñada para la tra
 
 Desde el punto de vista de la red la solución mas simple para solucionar problemas de congestión es eliminar tramas, mientras que desde el del usuario final se trata de transmitir tramas tan rápido como se pueda. Por ello el servicio de Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
 
-### Asynchrounous Transfer Mode (ATM)
+### Asynchrounous Transfer Mode (ATM) 
 
 ATM es una tecnología de conmutación y multiplexación de alta eficiencia, diseñada para manejar datos en redes de banda ancha. Utiliza celdas de tamaño fijo de 53 bytes (48 bytes de datos y 5 bytes de encabezado), lo que facilita el procesamiento y la transmisión eficiente en la red. ATM tiene la capacidad para manejar diferentes tipos de tráfico como voz, video, imagenes y datos sobre la misma red. Cada celda lleva consigo un identificador de ruta llamado VPI (Virtual Path Identifier) que especifica el camino virtual que recorrerá la celda dentro de la red ATM y un VCI (Virtual Channel Identifier) el cual identifica de manera única el canal virtual dentro de un camino virtual específico. Un canal virtual representa una conexión individual entre dos puntos, por donde se transmiten los datos.
 Debido a que las celdas es limitado para las cuestiones referentes al control, esta tecnología no permite realizar un control efectivo de la congestión del tráfico.
