--- a/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
@@ -16,16 +16,16 @@ Antes de comenzar a explicar las distintas características del protocolo IP, es
 
 ### Fragmentación de los Paquetes IP
 
-Algunos protocolos pueden transportar paquetes grandes, mientras que otros sólo transportan paquetes pequeños. Por ejemplo, las tramas Ethernet pueden transportar hasta 1.500 bytes de datos, para otros enlaces de área extensa no pueden transportar más de 576 bytes. La cantidad máxima de datos que una trama de la capa de enlace puede transportar se conoce como ***unidad máxima de transmisión*** (MTU). Puesto que cada paquete IP se encapsula dentro de una trama de la capa de enlace para ir de un router al siguiente, la MTU del protocolo de la capa de enlace impone un límite estricto a la longitud de un paquete.
+Algunos protocolos pueden transportar paquetes grandes, mientras que otros sólo transportan paquetes pequeños. Por ejemplo, las tramas Ethernet pueden transportar hasta 1500 bytes de datos, pera otros enlaces de área extensa no pueden transportar más de 576 bytes. La cantidad máxima de datos que una trama de la capa de enlace puede transportar se conoce como ***unidad máxima de transmisión*** (MTU). Puesto que cada paquete IP se encapsula dentro de una trama de la capa de enlace para ir de un router al siguiente, la MTU del protocolo de la capa de enlace impone un límite estricto a la longitud de un paquete.
 Un gran problema surge cuando cada uno de los enlaces existentes a lo largo de la ruta entre el emisor y el destino pueden utilizar diferentes protocolos de la capa de enlace y cada uno de estos protocolos puede utilizar una MTU diferente. La solución consiste en fragmentar los datos del paquete en dos o más paquetes más pequeños, encapsular cada de estos paquetes más pequeños en una trama de la capa de enlace distinta y enviar dichas tramas a través del enlace de salida. Cada uno de estos datagramas más pequeños se conocen como ***fragmentos***.
-Cuando un host de destino recibe una serie de paquetes procedentes del mismo origen, tiene que determinar cuales de ellos son fragmentos de algún otro paquete original más grande. Si algunos paquetes son fragmentos, tiene que determinar además cuándo ha recibido el último fragmento y cómo debe ensamblar los fragmentos que ha recibido para formar el paquete original. Cuando un router necesita fragmentar un paquete, cada paquete resultante se marca con la dirección de origen, la dirección de destino y el número de identificación del paquete original. Cuando el destino recibe una serie de paquetes procedentes del mismo host emisor, puede examinar los números de identificación para determinar cuáles de ellos son fragmentos de un mismo paquete más largo.
+Cuando un host de destino recibe una serie de paquetes procedentes del mismo origen, tiene que determinar cuales de ellos son fragmentos de un paquete más grande. Si algunos paquetes son fragmentos, tiene que determinar además cuándo ha recibido el último fragmento y cómo debe ensamblar los fragmentos que ha recibido para formar el paquete original. Cuando un router necesita fragmentar un paquete, cada paquete resultante se marca con la dirección de origen, la dirección de destino y el número de identificación del paquete original. Cuando el destino recibe una serie de paquetes procedentes del mismo host emisor, puede examinar los números de identificación para determinar cuáles de ellos son fragmentos de un mismo paquete más largo.
 Puesto que IP es un servicio no fiable, es posible que uno o más de los fragmentos nunca lleguen a su destino. Por esta razón, con el fin de que el host de destino esté absolutamente seguro de que ha recibido el último fragmento del paquete original, el último fragmento tiene un bit indicador puesto a 0, mientras que los demás fragmentos tienen el bit indicador puesto a 1. Además, para que el host de destino determine si falta un fragmento se utiliza el ***campo de desplazamiento*** del encabezado para especificar en qué posición dentro del paquete IP original encaja el fragmento.
 Debido a que este mecanismo puede ser utilizado para realizar ataques como DoS o denegaciones de servicio, la versión mas reciente del protocolo IPv6 no admite la fragmentación, sino que  crea paquetes más pequeños compatibles con todos lo tipos de redes.
 
 ### Direccionamiento IP
 
 Las direcciones IP tienen una longitud de 32 bits, dándonos una cantidad de $2^{32}$ direcciones IP direccionables. Estas direcciones normalmente se expresan utilizando la notación decimal con punto, en la que cada byte de la dirección se escribe en formato decimal y separada mediante un punto del resto de los bytes de la dirección. Todas las direcciones IP están compuestas por dos partes, la parte de red y la parte de los host, normalmente se suele indicar con una barra la cantidad de bits pertenecientes a la subred en cuestión, por ejemplo la IP 192.168.24.1/24 quiere decir que los primeros 24 bits de la dirección IP corresponden a la subred o también llamada ***prefijo de red***, mientra que los demás bits están disponibles para hacer referencias a los distintos host dentro de esa subred. Comunmente estos últimos bits de menor peso son los que se utilizan para realizar el direccionamiento al host destino. Este método de enrutamiento posee el nombre de ***Enrutamiento entre dominios sin clases*** (CIDR),  el cual permite definir una dirección CIDR más pequeño como por ejemplo de 21 bits para el prefijo de la red y los 11 restantes para identificar a los host de la red, lo que permitía a su vez crear distintas subredes dentro de esa misma red.
-Antes de adoptar ese esquema de enrutamiento CIDR, se utilizaba un esquema de direccionamiento conocido como ***direccionamiento con clases***, ya que se dividia a las redes como redes de clase A, B y C, de acuerdo a la cantidad de bytes que utilizaban para identificar a la red. Este esquema era muy ineficiente, ya que comunmente se asignaban direcciones de clase B a empresas que contaban con muchos equipos pero no los suficientes como para cubrir las 65.534 interfaces que proveían las IP de clase B, desperdiciando así gran cantidad de direcciones que no podían ser utilizados por otras organizaciones.
+Antes de adoptar el esquema de enrutamiento CIDR, se utilizaba un esquema de direccionamiento conocido como ***direccionamiento con clases***, ya que se dividia a las redes como redes de clase A, B y C, de acuerdo a la cantidad de bytes que utilizaban para identificar a la red. Este esquema era muy ineficiente, ya que comunmente se asignaban direcciones de clase B a empresas que contaban con muchos equipos pero no los suficientes como para cubrir las 65.534 interfaces que proveían las IP de clase B, desperdiciando así gran cantidad de direcciones que no podían ser utilizados por otras organizaciones.
 
 #### Obtención de Bloques de Direcciones
 
@@ -33,24 +33,30 @@ Para obtener un bloque de direcciones IP que pueda ser utilizado dentro de la su
 
 #### Dynamic Host Configuration Protocol (DHCP)
 
-Normalmente cuando se obtenía el bloque de direcciones del proveedor de servicios de internet, los administradores de redes eran los encargados de configurar la IP para cada uno de los equipos que integraban la red, aunque en la actualidad esta asignación es hecha automáticamente utilizando el ***protocolo de configuración dinámica de host***, Un administrador de red puede configurar el DHCP para que cada máquina que se conecte a la red siempre reciba la misma dirección IP o se puede configurar para que a cada equipo se le asigne una dirección IP temporal que ira cambiando cada vez que el host se conecte a la red.
+Normalmente cuando se obtenía el bloque de direcciones del proveedor de servicios de internet, los administradores de redes eran los encargados de configurar la IP para cada uno de los equipos que integraban la red, aunque en la actualidad esta asignación es hecha automáticamente utilizando el ***protocolo de configuración dinámica de host*** (DHCP), Un administrador de red puede configurar el DHCP para que cada máquina que se conecte a la red siempre reciba la misma dirección IP o se puede configurar para que a cada equipo se le asigne una dirección IP temporal que ira cambiando cada vez que el host se conecte a la red.
 Además de esta función el DHCP permite que los host accedan a información adicional, como la máscara de la subred, la dirección IP del router en el que se hace el primer salto e incluso la dirección IP del servidor DNS local.
 DHCP es un protocolo cliente-servidor. Normalmente, un cliente es un host recién llegado que desea obtener información de configuración de la red, incluyendo una dirección IP para sí mismo. En el caso más simple, cada subred tendrá un servidor DHCP. Si en la subred no hay ningún servidor, es necesario un agente de retransmisión DHCP que conozca la dirección de un servidor DHCP para dicha red. Para un host recién llegado a una red, el protocolo DHCP es un proceso de cuatro pasos:
 
-1. **Descubrimiento del servidor DHCP**. La primera tarea de un host recién llegado es encontrar un servidor DHCP con el que interactuar. Esto se hace mediante un mensaje de descubrimiento DHCP, que envía un cliente dentro de un paquete UDP al puerto 67. Para encontrar el servidor el cliente DHCP envia el paquete utilizando la dirección de difusión o broadcast para que el paquete se envie a toda la red y solo el servidor responda al destinatario.
-2. **Oferta del servidor DHCP**. Un servidor DHCP que recibe un mensaje de descubrimiento DHCP responde al cliente con un mensaje de oferta DHCP, que se difunde a todos los nodos de la subred utilizando nuevamente un mensaje difusión. Puesto que en la subred pueden existir varios servidores DHCP, el cliente puede encontrarse en la situación envidiable de poder elegir entre varias ofertas. Cada mensaje de oferta de servidor contiene el ID de transacción del mensaje de descubrimiento recibido, la dirección IP propuesta para el cliente, la máscara de red y el tiempo de arrendamiento de la dirección IP, generalmente se define durante horas o incluso días.
-3. **Solicitud DHCP**. El cliente recién llegado seleccionará de entre las ofertas de servidor y responderá a la oferta seleccionada con un mensaje de solicitud DHCP, devolviendo los parámetros de configuración.
+1. **Descubrimiento del servidor DHCP**. La primera tarea de un host recién llegado es encontrar un servidor DHCP con el que interactuar. Esto se hace mediante un mensaje de descubrimiento DHCP, que envía un cliente dentro de un paquete UDP al puerto 67. Para encontrar el servidor el cliente DHCP envia el paquete utilizando la dirección de difusión o broadcast (255.255.255.255) para que el paquete se envíe a toda la red y solo el servidor responda al destinatario.
+2. **Oferta del servidor DHCP**. Un servidor DHCP que recibe un mensaje de descubrimiento DHCP responde al cliente con un mensaje de oferta DHCP, que se difunde a todos los nodos de la subred utilizando nuevamente un mensaje difusión. Puesto que en la subred pueden existir varios servidores DHCP, el cliente puede encontrarse en la situación de poder elegir entre varias ofertas. Cada mensaje de oferta de servidor contiene el ID de transacción del mensaje de descubrimiento recibido, la dirección IP propuesta para el cliente, la máscara de red y el tiempo de arrendamiento de la dirección IP, generalmente se define durante horas o incluso días.
+3. **Solicitud DHCP**. El cliente recién llegado seleccionará de entre las ofertas del servidor y responderá a la oferta seleccionada con un mensaje de solicitud DHCP, devolviendo los parámetros de configuración.
 4. **ACK DHCP**. El servidor contesta al mensaje de solicitud DHCP con un mensaje ACK DHCP, que confirma los parámetros solicitados.
 
 Una vez que el cliente recibe el mensaje de reconocimiento DHCP, la interacción se completa y el cliente puede utilizar la dirección IP asignada por DHCP durante el tiempo de arrendamiento. Dado que un cliente puede desear utilizar su dirección durante más tiempo del arrendado, DHCP también proporciona un mecanismo que permite a un cliente renovar su tiempo de arrendamiento de una dirección IP.
 
 #### Traducción de Direcciones de Red
 
-Supongamos que una empresa cuenta con un determinado número de equipos a la hora de iniciar la actividad, en ese caso se contrata un servicio de Internet y se le asigna a cada equipo una dirección IP mediante DHCP o manualmente, en caso de que la empresa comience a crecer y comience a adquirir cada vez más equipos va a llegar un momento en que el bloque de direcciones asignado por el proveedor de Internet será insuficiente. Afortunadamente, existe una forma más simple de asignar direcciones que ha encontrado un uso cada vez más amplio en escenarios de este tipo la ***traducción de direcciones de red*** (NAT). Los routers NAT son dispositivos que se encargan de ocultar los detalles de las redes domésticas o locales del resto de la red.
+Supongamos que una empresa cuenta con un determinado número de equipos a la hora de iniciar la actividad, en ese caso se contrata un servicio de Internet y se le asigna a cada equipo una dirección IP mediante DHCP o manualmente, en caso de que la empresa comience a crecer y comience a adquirir cada vez más equipos va a llegar un momento en que el bloque de direcciones asignado por el proveedor de Internet será insuficiente. Afortunadamente, existe una forma más simple de asignar direcciones que ha encontrado un uso cada vez más amplio en escenarios de este tipo, la ***traducción de direcciones de red*** (NAT). Los routers NAT son dispositivos que se encargan de ocultar los detalles de las redes domésticas o locales del resto de la red.
 Si todos los paquetes que llegan al router NAT procedentes de la WAN tienen la misma dirección IP de destino, específicamente, la de la interfaz WAN del router NAT, la manera en la que este tipo de routers pueden direccionar los paquetes a los hosts correspondientes es a través de una **tabla de traducciones NAT** almacenada en el router NAT, e incluir los números de puerto, así como las direcciones IP en las entradas de la tabla.
-Cuando un dispositivo realiza una petición a un servidor externo, el equipo envía un paquete que contiene tanto su dirección IP interna y el puerto del proceso correspondiente, cuando este paquete llega al router NAT, este cambia la dirección IP interna de ese equipo por la dirección IP pública de la red, además mapea el puerto de ese paquete a uno que utiliza el NAT internamente, luego agrega tanto la IP interna como su puerto correspondiente a la tabla de traducciones NAT. Cuando el servidor envía su respuesta, la misma es recibida por el router y realiza un remapeado de la dirección IP del destinatario y su puerto correspondiente, de esta forma ese paquete se enviará al host correspondiente.
+Cuando un dispositivo realiza una petición a un servidor externo, el equipo envía un paquete que contiene tanto su dirección IP interna y el puerto del proceso correspondiente, cuando este paquete llega al router NAT, este cambia la dirección IP interna de ese equipo por la dirección IP pública de la red WAN, además mapea el puerto de ese paquete a uno que utiliza el NAT internamente, luego agrega tanto la IP interna como su puerto correspondiente a la tabla de traducciones NAT. Cuando el servidor envía su respuesta, la misma es recibida por el router y realiza un remapeado de la dirección IP del destinatario y su puerto correspondiente, de esta forma ese paquete se enviará al host correspondiente.
 
 ### Internet Control Message Protocol (ICMP)
 
 Los hosts y los routers utilizan ICMP, para intercambiarse información acerca de la capa de red. El uso más típico de ICMP es la generación de informes de error. ICMP a menudo se considera parte de IP pero, en sentido arquitectónico, se encuentra justo encima de IP, ya que los mensajes ICMP son transportados dentro de los paquetes IP.
-Los mensajes ICMP tienen un campo de tipo y un campo de código, y contienen la cabecera y los 8 primeros bytes del paquete IP que ha dado lugar a la generación del mensaje ICMP en primer lugar
+Los mensajes ICMP tienen un campo de tipo y un campo de código, y contienen la cabecera y los 8 primeros bytes del paquete IP que ha dado lugar a la generación del mensaje ICMP en primer lugar, los códigos ICMP se pueden ver en las siguiente imagen
+
+![[codigos-ICMP.png]]
+
+>[!tldr] Tiempo de Vida de los Paqueres
+>En la difinición del protocolo IP todos los paquetes y posteriormente tramas, tienen un tiempo de vida, de esta manera se evitaba que paquetes perdidos circulen infinitamente por la red y produzcan una congestión en la red, este tiempo de vida se implementa a través de un contador, cuando un router ve que el paquete supero su tiempo de vida lo descarta y envía un mensaje ICMP al emisor de tipo 11 y de código 0 indicando que el tiempo de vida de ese paquete a caducado.
+
