Correcciones menores | DB

--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -10,7 +10,6 @@ La conversión de un diagrama Entidad-Relación a formato de tablas, es la base 
 La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación y la cardinalidad y su participación en una relación.
 
 - Un ***conjunto de entidades débiles*** se representa como una tabla con una columna por cada atributo de la entidad, y además, los atributos que componen la *clave primaria* de la entidad fuerte que lo identifica.
-- Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo de $R \{a_1, \dotsm , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de las entidades $A$, $B$ y $C$ respectivamente.
 
 >[!tldr] Redundancia de Tablas
 >Existen casos en que puede haber redundancia de tablas, uno de estos casos es la relación de identificación, la cual tiene siempre las siguientes características:
@@ -24,8 +23,9 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 >$$
 >Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para relación.
 
-- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de las entidades participantes de dicha relación.
-- Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad débil un atributo extra que representaría la clave primaria de la entidad fuerte con la que se está relacionando. 
+- Una relación $R$ entre los conjuntos de entidades $A$, $B$, $C$, se representa como una tabla $R$, con una columna por cada atributo de $R \{a_1, \dotsm , a_n\} \cup \{K_A, K_B, K_C\}$, donde $K_A$, $K_B$, $K_C$, son los atributos que forman las claves primarias de las entidades $A$, $B$ y $C$ respectivamente.
+- Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de las entidades participantes la relación.
+- Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad un atributo extra que representaría la clave primaria de la entidad con la que se está relacionando.
 
 ![[varios-uno.png]]
 
@@ -37,7 +37,7 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 - Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria de la tabla $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
 - Para las relaciones recursivas, es decir, aquellas entidades que tengan una relación consigo misma, se las va a representar de formas diferentes de acuerdo a la aridad que posea dicha relación.
 	- Si la relación es de uno a varios, se puede agregar un atributo más a la entidad que haga referencia, mediante su clave primaria, a otra fila de la tabla, por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
-	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y el par de identificadores del empleado y del jefe.
+	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y las claves primarias de ambas entidades.
 
 #### Representación de la Generalización y Especialización
 
@@ -46,7 +46,7 @@ Para representar en forma de tablas tanto la generalización como la especializa
 - **Método 1**: Se forma una tabla para la entidad de nivel superior y una tabla para cada conjunto entidad de nivel inferior, las cuales incluyen sus conjuntos de atributos respectivos, más los atributos que conforman la clave primaria de la entidad de mayor nivel.
 	- **Ventajas**: Las actualizaciones son más rápidas.
 	- **Desventajas**: Para acceder a toda la información se requiere acceder a dos tablas.
-- **Método 2**: Formar una tabla por cada conjunto entidad con todos sus atributos locales y heredados. Si la especialización es total, la tabla para la entidad generalizada no requiere almacenar información, pudiendo ser definida como una vista que contenga la unión de las tablas especializadas. Con el percance de que una tabla explícita puede necesitarse para restricciones de clave foránea.
+- **Método 2**: Formar una tabla por cada conjunto entidad de nivel inferior con todos sus atributos locales y heredados. Si la especialización es total, la tabla para la entidad generalizada no requiere almacenar información, pudiendo ser definida como una vista que contenga la unión de las tablas especializadas. Con el percance de que una tabla explícita puede necesitarse para restricciones de clave foránea.
 	- **Ventajas**: Se tiene todos los datos de la entidad en una sola tabla.
 	- **Desventajas**: Los atributos se almacenan de forma redundante para cada una de las subclases.
 
