IPv6, Correcciones menores | Redes DB MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -14,7 +14,7 @@ En la figura se puede observar como varía el énfasis de cada disciplina en un 
 | -------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | **Modelado del negocio**               | - Comprender la estructura y la dinámica de la organización. <br>- Comprender problemas actuales e identificar posibles mejoras. <br>- Comprender los procesos de negocio.                                                                                                                                                                                                                                                                                                                                                                                |
 | **Requerimientos**                     | - Establecer lo que el sistema debe hacer (Especificar Requisitos) <br>- Definir los límites del sistema, y una interfaz de usuario. <br>- Realizar una estimación del costo y tiempo de desarrollo.                                                                                                                                                                                                                                                                                                                                                      |
-| **Análisis y diseño**                  | Esta disciplina define la arquitectura del sistema y tiene como objetivos trasladar requisitos en especificaciones de implementación.                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| **Análisis y diseño**                  | Esta disciplina define la arquitectura del sistema y tiene como objetivos trasladar requerimientos en especificaciones de implementación.                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | **Implementación**                     | - Implementar las clases de diseño como componentes.<br>- Asignar los componentes a los nodos.<br>- Probar los componentes individualmente.<br>- Integrar los componentes en un sistema ejecutable.                                                                                                                                                                                                                                                                                                                                                       |
 | **Pruebas**                            | - Verificar la integración de los componentes.<br>- Verificar que todos los requisitos han sido implementados.<br>- Asegurar que los defectos detectados han sido resueltos antes de la distribución.                                                                                                                                                                                                                                                                                                                                                     |
 | **Despliegue**                         | - Asegurar que el producto está preparado para el cliente, proceder a su entrega y recepción por el cliente.<br>- Probar el software en su entorno final (Prueba Beta), empaquetarlo, distribuirlo e instalarlo, así como la tarea de enseñar al usuario.                                                                                                                                                                                                                                                                                                 |
@@ -63,6 +63,6 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 >	- Define actividades, roles y responsabilidades desde jefe de proyecto hasta los analistas, desarrolladores y equipos de prueba.
 >- **Desventajas**:
 >	- Pretende prever y tener todo el control de antemano. 
->	- Modelo genera trabajo adicional. 
+>	- El modelado genera mucho trabajo adicional. 
 >	- Genera muchos costos.
 >	- No recomendable para proyectos pequeños.
