--- a/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/3. IP & ICMP.md
@@ -27,10 +27,6 @@ Debido a que este mecanismo puede ser utilizado para realizar ataques como DoS o
 Las direcciones IP tienen una longitud de 32 bits, dándonos una cantidad de $2^{32}$ direcciones IP direccionables. Estas direcciones normalmente se expresan utilizando la notación decimal con punto, en la que cada byte de la dirección se escribe en formato decimal y separada mediante un punto del resto de los bytes de la dirección. Todas las direcciones IP están compuestas por dos partes, la parte de red y la parte de los host, normalmente se suele indicar con una barra la cantidad de bits pertenecientes a la subred en cuestión, por ejemplo la IP 192.168.24.1/24 quiere decir que los primeros 24 bits de la dirección IP corresponden a la subred o también llamada ***prefijo de red***, mientra que los demás bits están disponibles para hacer referencias a los distintos host dentro de esa subred. Comunmente estos últimos bits de menor peso son los que se utilizan para realizar el direccionamiento al host destino. Este método de enrutamiento posee el nombre de ***Enrutamiento entre dominios sin clases*** (CIDR),  el cual permite definir una dirección CIDR más pequeño como por ejemplo de 21 bits para el prefijo de la red y los 11 restantes para identificar a los host de la red, lo que permitía a su vez crear distintas subredes dentro de esa misma red.
 Antes de adoptar el esquema de enrutamiento CIDR, se utilizaba un esquema de direccionamiento conocido como ***direccionamiento con clases***, ya que se dividia a las redes como redes de clase A, B y C, de acuerdo a la cantidad de bytes que utilizaban para identificar a la red. Este esquema era muy ineficiente, ya que comunmente se asignaban direcciones de clase B a empresas que contaban con muchos equipos pero no los suficientes como para cubrir las 65.534 interfaces que proveían las IP de clase B, desperdiciando así gran cantidad de direcciones que no podían ser utilizados por otras organizaciones.
 
-#### Obtención de Bloques de Direcciones
-
-Para obtener un bloque de direcciones IP que pueda ser utilizado dentro de la subred de una organización, un administrador de red tiene que contactar en primer lugar con su proveedor de internet, el cual le proporcionará direcciones extraídas de un bloque de direcciones mayor que ya habrá sido asignado a ese proveedor. A su vez el mismo proveedor puede dividir su bloque de direcciones para dar servicio a múltiples personas u organizaciones. Esta es una forma de obtener un bloque de direcciones, aunque existe otra forma de obtener estos bloques y es a través del ICANN el cual es una organización sin fines de lucro que se encarga de la asignación de las direcciones IP tanto a los proveedores de Internet como a grandes organizaciones. Además de ser la encargada de gestionar los servidores raiz DNS, asignando nombres de dominio y resolviendo conflictos referentes a estos nombres de dominio.
-
 #### Dynamic Host Configuration Protocol (DHCP)
 
 Normalmente cuando se obtenía el bloque de direcciones del proveedor de servicios de internet, los administradores de redes eran los encargados de configurar la IP para cada uno de los equipos que integraban la red, aunque en la actualidad esta asignación es hecha automáticamente utilizando el ***protocolo de configuración dinámica de host*** (DHCP), Un administrador de red puede configurar el DHCP para que cada máquina que se conecte a la red siempre reciba la misma dirección IP o se puede configurar para que a cada equipo se le asigne una dirección IP temporal que ira cambiando cada vez que el host se conecte a la red.
@@ -50,10 +46,28 @@ Supongamos que una empresa cuenta con un determinado número de equipos a la hor
 Si todos los paquetes que llegan al router NAT procedentes de la WAN tienen la misma dirección IP de destino, específicamente, la de la interfaz WAN del router NAT, la manera en la que este tipo de routers pueden direccionar los paquetes a los hosts correspondientes es a través de una **tabla de traducciones NAT** almacenada en el router NAT, e incluir los números de puerto, así como las direcciones IP en las entradas de la tabla.
 Cuando un dispositivo realiza una petición a un servidor externo, el equipo envía un paquete que contiene tanto su dirección IP interna y el puerto del proceso correspondiente, cuando este paquete llega al router NAT, este cambia la dirección IP interna de ese equipo por la dirección IP pública de la red WAN, además mapea el puerto de ese paquete a uno que utiliza el NAT internamente, luego agrega tanto la IP interna como su puerto correspondiente a la tabla de traducciones NAT. Cuando el servidor envía su respuesta, la misma es recibida por el router y realiza un remapeado de la dirección IP del destinatario y su puerto correspondiente, de esta forma ese paquete se enviará al host correspondiente.
 
-### Internet Control Message Protocol (ICMP)
+### Internet Protocol Version 6
+
+A principios de la década de 1990, el Internet Engineering Task Force comenzó a desarrollar un sucesor para el protocolo IPv4, ya que el número de nuevos  nodos que se iban sumando a la red era cada vez mayor llegando al punto que comenzaban a terminarse las direcciones IP asignable. Además se aprovecho esto para realizar mejoras a dicho protocolo.
+A diferencia de su versión anterior, los paquetes del protocolo IPv6 eliminaron muchos del encabezado, véase la siguiente imagen.
+
+![[encavezado-ipv6.png]]
+
+Entre las principales características de esta nueva versión del protocolo son las siguientes:
+
+- El tamaño de las direcciones IP se amplia a 128 bits. Agregando un nuevo tipo de dirección denominada ***dirección anycast***, que permite entregar un paquete a una máquina cualquiera dentro de un grupo de hosts.
+- Las cabeceras de los paquetes fueron simplificadas eliminando algunos campos y otros haciendolos opcionales, haciendo que las cabeceras posean un tamaño fijo de 40 bytes haciendo que el procesamiento de los paquetes sea más rápido.
+- IPv6 establece la definición de flujos que permite etiquetar paquetes que pertenezcan a determinados flujos de datos, los cuales ayudan a asignar un tratamiento especial a estos mismos, como por ejemplo los paquetes pertenecientes a la transmisión de audio y  vídeo en tiempo real pueden estar asignados a un flujo. Además de estos flujos esta versión del protocolo también posee un campo de 8 bits para definir que tipo de tráfico es ese paquete.
+- No se permite ni la fragmentación ni el reensamblado de paquetes en los routers intermedios, en caso de que un router tenga que enviar un paquete por una red que acepta tramas más pequeñas, el router descartará el paquete y enviará un mensaje el emisor mediante un código ICMP, de esta forma el emisor puede disminuir el tamaño de los paquetes. Los paquetes se fragmentan y se reconstruyen solo en los sistemas terminales.
+- Se elimina la suma do comprobación de las cabeceras, ya que tanto la capa de transporte como de enlace realizan sus respectivas sumas de comprobación, por lo que los diseñadores vieron redundante que la capa de red realice la misma operación otra vez.
+- El campo de las ***opciones*** ya no se incluye en los encabezados, sin embargo las opciones no han desaparecido, siguen estando pero como una de las posibles siguientes cabeceras dentro de la cabecera IPv6, al igual que las cabeceras UDP o TCP pueden ser las siguientes cabeceras dentro del encabezado IP.
+
+En el documento RFC 4443 se ha definido una nueva versión de ICMP para IPv6. Además de reorganizar las definiciones de tipos y códigos ICMP existentes, ICMPv6 también añadió nuevos tipos y códigos requeridos por la nueva funcionalidad de IPv6, entre los que se incluyen el tipo “*Paquete demasiado grande*” y el código de error “*Opciones IPv6 no reconocidas*”. Además, ICMPv6 incluye la funcionalidad del ***Protocolo de gestión de grupos de Internet*** (IGMP).
+
+## Internet Control Message Protocol (ICMP)
 
 Los hosts y los routers utilizan ICMP, para intercambiarse información acerca de la capa de red. El uso más típico de ICMP es la generación de informes de error. ICMP a menudo se considera parte de IP pero, en sentido arquitectónico, se encuentra justo encima de IP, ya que los mensajes ICMP son transportados dentro de los paquetes IP.
-Los mensajes ICMP tienen un campo de tipo y un campo de código, y contienen la cabecera y los 8 primeros bytes del paquete IP que ha dado lugar a la generación del mensaje ICMP en primer lugar, los códigos ICMP se pueden ver en las siguiente imagen
+Los mensajes ICMP tienen un campo de tipo y un campo de código, y contienen la cabecera y los 8 primeros bytes del paquete IP que ha dado lugar a la generación del mensaje ICMP en primer lugar, los códigos ICMP se pueden ver en las siguiente imagen.
 
 ![[codigos-ICMP.png]]
 
