Corrigiendo cosas y agregando info | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de Transporte.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de Transporte.md
@@ -1,4 +1,4 @@
-Un protocolo de la capa de transporte proporciona una comunicación lógica entre procesos de aplicación que se ejecutan en diferentes máquinas. Por comunicación lógica queremos decir que, desde la perspectiva de la aplicación, es como si las máquinas que ejecutan los procesos estuvieran conectados directamente. Los procesos de aplicación utilizan la comunicación lógica proporcionada por la capa de transporte para enviarse mensajes entre sí, sin preocuparse por los detalles de la infraestructura física utilizada para transportar estos mensajes.
+Un protocolo de la capa de transporte proporciona una comunicación lógica entre procesos de aplicación que se ejecutan en diferentes máquinas. Por comunicación lógica queremos decir que, desde la perspectiva de la aplicación, es como si las máquinas que ejecutan los procesos estuvieran conectados directamente. Los procesos de aplicación utilizan la comunicación lógica proporcionada por la capa de transporte para enviarse mensajes entre sí, sin preocuparse por los detalles de la infraestructura física utilizada para transportar estos mensajes. Además en la capa de red también se encarga de llevar a cabo el control de flujo, de congestión y de error entre ambos extremos de la comunicación, aparte de proveer mecanismos de multiplexación y desmultiplexación.
 Los protocolos de la capa de transporte están implementados en los sistemas terminales, pero no en los routers de la red. En el lado emisor, la capa de transporte convierte los mensajes que recibe procedentes de un proceso de aplicación emisor en paquetes de la capa de transporte, conocidos como segmentos de la capa de transporte. A continuación, la capa de transporte pasa el segmento a la capa de red del sistema terminal emisor, donde el segmento se encapsula dentro de un paquete de la capa de red (datagrama) y se envía al destino. En el lado receptor, la capa de red extrae el segmento de la capa de transporte del datagrama y lo sube a la capa de transporte. A continuación, esta capa procesa el segmento recibido, poniendo los datos del segmento a disposición de la aplicación de recepción.
 
 >[!tldr] Lectura de los Encabezados
