--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -42,9 +42,36 @@ En el ámbito de las redes de datos, el manejo eficiente del tráfico de informa
     - **Inundación:** Consiste en enviar el paquete hacia todos los nodos vecinos, de la tabla de reenvios del router.
     - **Aleatorio:** Se elige una salida al azar en cada nodo al que llega el paquete.
     - **Adaptable:** El encaminamiento se ajusta según las condiciones de la red, lo que puede incluir la congestión o la disponibilidad de rutas alternativas.
-
 - **Control de Congestión**: Busca regular el flujo de datos para prevenir la saturación de la memoria de los distintos nodos de la red. Los mecanismos de control de congestión se basan generalmente en dos estrategias principales:
     - **Descarte del paquete de entrada:** Si los paquetes entran a una velocidad mayor que la que pueden ser procesados o enviados, se descartan los paquetes adicionales.
     - **Evitar que el paquete sea enviado por el nodo anterior:** Se puede notificar al nodo anterior para que reduzca la velocidad de envío de paquetes, ayudando así a regular el flujo de datos.
 
 Estas funciones son esenciales para garantizar un enrutamiento eficiente de los paquetes y para mantener un control adecuado del tráfico en la red de conmutación de paquetes, asegurando así un funcionamiento óptimo y confiable del sistema de comunicaciones.
+
+## El Estándar X.25
+
+La recomendación X.25 del CCITT es un estándar que surgió a principios de los años 70 con el propósito de facilitar la interconexión de redes privadas que eran incompatibles entre sí, dicho estándar especifica una interfaz entre una estación de trabajo y una red de conmutación de paquetes.
+Dentro de las principales características ofrecidas por este protocolo se encuentran:
+
+- **Intercambio de información entre terminales y un nodo:** Define cómo se debe realizar el intercambio de información entre un Equipo Terminal de Datos (DTE) y un Equipo de Conexión de Datos (DCE) en una red de conmutación de paquetes.
+- **Servicio orientado a conexión:** Utiliza un servicio orientado a la conexión, como lo son los circuitos virtuales, lo que significa que establece una conexión virtual entre el emisor y el receptor antes de que comience la transmisión de datos. Este servicio garantiza el secuenciamiento de los paquetes, lo que asegura que lleguen al destino en el orden correcto. Además de 
+- **Multiplexación:** Uno de las funcionalidades más importantes que ofrece X.25 es la capacidad de establecer 4095 circuitos virtuales sobre una misma conexión física entre dos terminales, permitiendo una comunicación full-duplex entre ambos equipos, es decir, los paquetes asociados a los distintos circuitos pueden transmitirse en ambos sentidos.
+- **Control de flujo y de errores:** Este protocolo utiliza el mecanismo de ventanas deslizantes para realizar el control de flujo entre ambos extremos. Mientras que para el control de errores se utiliza la técnica de ***adelante-atrás-N***, de modo que si el nodo recibe un mensaje de que el paquete ha sido rechazado, enviará nuevamente ese paquete específico y todos los siguientes.
+
+El estándar aborda los tres primeros niveles del modelo OSI, que incluyen el nivel físico, el nivel de enlace de datos y el nivel de red. Proporciona protocolos y procedimientos para la transferencia de datos en estos niveles, lo que facilita la interoperabilidad entre diferentes sistemas y redes.
+A lo largo de los años, el estándar X.25 ha sido revisada varias veces para adaptarse a los avances tecnológicos y a las nuevas necesidades del mercado. Las revisiones se llevaron a cabo en 1977, 1980, 1984, 1988 y 1992, lo que permitió mantener su relevancia y eficacia en un entorno en constante cambio.
+
+### Frame Relay
+
+Frame Relay es una tecnología de red orientada a paquetes diseñada para la transmisión eficiente de datos a través de redes WAN. Utiliza tramas de tamaño variable y es conocido por su simplicidad y eficiencia en el manejo de tráfico esporádico de datos, que preserva el orden de transferencia de las tramas, aunque con una pequeña probabilidad de pérdida.  Las principales características de Frame Relay son las siguientes:
+
+- Los paquetes de control se transmiten a través de una conexión lógica distinta de los datos de usuario (fuera de banda).
+- La multiplexación y conmutación de conexiones lógicas se hacen en el nivel 2.
+- No existe control de flujo ni de errores a nivel de enlaces individuales. Este control se realiza de extremo a extremo y en niveles superiores.
+
+Desde el punto de vista de la red la solución mas simple para solucionar problemas de congestión es eliminar tramas, mientras que desde el del usuario final se trata de transmitir tramas tan rápido como se pueda. Por ello el servicio de Frame Relay emplea un mecanismo de regulación, conocido como ***Tasa de conexión contratada***, la cual es la velocidad en bits/seg. que la red compromete a cumplir en la transmisión de tramas para cada conexión específica. Cualquier trama transmitida por encima del limite especificado por la tasa es marcada por el nodo encendiendo el bit DE, lo que indica que es susceptible de ser rechazada en caso de congestión. Existe un caudal máximo por encima del cual la trama es siempre rechazada.
+
+### Asynchrounous Transfer Mode (ATM) 
+
+ATM es una tecnología de conmutación y multiplexación de alta eficiencia, diseñada para manejar datos en redes de banda ancha. Utiliza celdas de tamaño fijo de 53 bytes (48 bytes de datos y 5 bytes de encabezado), lo que facilita el procesamiento y la transmisión eficiente en la red. ATM tiene la capacidad para manejar diferentes tipos de tráfico como voz, video, imagenes y datos sobre la misma red. Cada celda lleva consigo un identificador de ruta llamado VPI (Virtual Path Identifier) que especifica el camino virtual que recorrerá la celda dentro de la red ATM y un VCI (Virtual Channel Identifier) el cual identifica de manera única el canal virtual dentro de un camino virtual específico. Un canal virtual representa una conexión individual entre dos puntos, por donde se transmiten los datos.
+Debido a que el tamaño de las celdas es limitado, las cabeceras de los paquetes ATM no tienen ningún campo reservado para las cuestiones referentes al control, por lo que esta tecnología no permite realizar un control efectivo de la congestión del tráfico. Con la ventaja de que al tener todos los paquetes y tramas el mismo tamaño la velocidad y los recursos utilizados para el procesamiento de los paquetes en mucho menor.
