Correcciones redacción | DB}

--- a/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
@@ -74,10 +74,10 @@ CREATE INDEX idx_sucursal ON sucursal (nombre_sucursal);
 ```
 
 >[!tldr] Claves Candidatas en los Índices
->Si deseamos declarar que la clave de búsqueda es una clave candidata, hay que añadir la cláusula `UNIQUE` a la definición del índice. De la siguiente manera:
+>Si deseamos declarar que la clave de búsqueda es una clave candidata, hay que añadir la cláusula `UNIQUE` a la definición del índice, es decir, si esa clave puede identificar unívocamente cada uno de los elementos de una tabla, el índice debe crearse utilizando el predicado `UNIQUE`. La declaración del índice se realiza de la siguiente manera:
 >```sql
 >CREATE UNIQUE INDEX idx_sucursal ON sucursal (id_sucursal);
 >```
 
-Los índices son importantes para el procesamiento eficiente de las transacciones tanto de actualización como de consulta. Cuando se define un atributo o conjunto de atributos como clave primaria, el sistema crea un índice sobre esa clave.
+Los índices son importantes para el procesamiento eficiente de las transacciones tanto de actualización como de consulta. Cuando se define un atributo o conjunto de atributos como clave primaria, el sistema crea implícitamente un índice sobre esa clave.
 Aunque la sintaxis que se muestra se usa ampliamente y está soportada en muchos sistemas de bases de datos, no es parte de la norma ANSI /SQL.
