--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -37,7 +37,7 @@ El objetivo final de este sistema multinivel es lograr la separación de las apl
 >- **Independencia Lógica de los Datos**: Es la capacidad de modificar el esquema lógico sin alterar el esquema externo ni los programas de aplicación.
 
 >[!note] Conceptos Sueltos
->- El diseño completo de la base de datos se llama ***esquema*** de la base de datos.
+>- El diseño completo de la base de datos se llama ***esquema*** (schema) de la base de datos.
 >- Los datos que una base de datos contiene en un momento determinado se denomina ***instancia*** de la base de datos.
 >- Cuando se define una nueva base de datos solo se especifica sus esquemas y cuando comenzamos a poblar esta base de datos pasamos a su ***estado inicial***.
 >- El estado en un punto de tiempo dado se denomina ***estado actual***.
